--- a/airplanes/style/app.css
+++ b/airplanes/style/app.css
@@ -2,8 +2,12 @@
 
 body {
     padding-top:60px;
-    margin: auto;
-}
+    padding-bottom:60px;
+
+    background: url("https://github.com/julialedur/julialedur.github.io/blob/master/airplanes/style/images/bg-final2.png?raw=true");
+    /* background-repeat: repeat-x;
+    background-repeat: repeat-y; */
+    }
 
 
 /* choose a light or dark theme to add to the body tag. */
@@ -12,8 +16,8 @@ body {
     color: #d8e9f0;   
 }
 .light-theme {
-    background-color: white;
-    color: black;    
+    background-color: #EDF2F6;
+    color: #000000;    
 }
 
 .container {
@@ -26,6 +30,39 @@ body {
     width: 100%;
 }
 
+.a {
+    text-decoration: none;
+    border-bottom: 0.1rem solid currentColor;
+    color: inherit;
+    -webkit-transition: color 0.4s, text-shadow 0.4s;
+    transition: color 0.4s, text-shadow 0.4s;
+  }
+
+.a hover {
+    color: #FCCEAA;
+    text-shadow: 0 0 0.8rem #FF7770;
+  }
+
+::selection {
+    text-shadow: 0 0 0.8rem #EF8B8B;
+    background: rgba(255, 119, 112, 0.1);
+    color: rgb(252, 185, 170);
+  }
+
+/* unvisited link */
+a:link {
+    color: #FCCEAA;
+}
+
+/* visited link */
+a:visited {
+    color: #F03535;
+}
+
+/* mouse over link */
+a:hover {
+    color: #FF7770;
+}
 
 
 /*
@@ -56,16 +93,18 @@ sub-font
 
 .headline {
     font-size: 3.5rem;
-    line-height: 0.9;
+    line-height: 1.0;
     margin-bottom: 0.25rem;
     margin-top: 1rem;
     font-weight: 700;
+    letter-spacing: -1.5px;
 }
 
 .body-text {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 1.6;
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 
 }
 
@@ -99,13 +138,14 @@ sub-font
     line-height: 0.9;
     margin-bottom: 0.5rem;
     margin-top: 1.5rem;
-    font-weight: 700;
+    font-weight: 800;
+    letter-spacing: -1.5px;
 }
 
 .label {
-    font-size: 1.25rem;
+    font-size: 1.8rem;
     line-height: 1.25;
-    margin-top: 2rem;
+    margin-top: 2.5rem;
     margin-bottom: 0.5rem;
     font-weight: 700;
 }
@@ -133,7 +173,9 @@ sub-font
 }
 
 
-
+.image {
+    margin-top: 40px;
+}
 
 
 
